untangle some of the mess around station closures. New data version including upcoming replacement buses