@@ -28,7 +28,7 @@ import static org.junit.jupiter.api.Assertions.assertFalse;
 
 @ExtendWith(DropwizardExtensionsSupport.class)
 public class StationResourceClosedStationTest {
-    private final static TramDate when = TestEnv.testDay();
+    private final static TramDate when = TramDate.of(TestEnv.LocalNow().toLocalDate());
 
     private static final TramStations closedStation = TramStations.StPetersSquare;
 
@@ -50,10 +50,10 @@ public class StationResourceClosedStationTest {
         List<StationClosureDTO> results = result.readEntity(new GenericType<>() {});
 
         assertEquals(1, results.size());
-        StationClosureDTO stationClosure = results.get(0);
+        StationClosureDTO stationClosure = results.getFirst();
         List<LocationRefDTO> stations = stationClosure.getStations();
         assertEquals(1, stations.size());
-        assertEquals(closedStation.getIdForDTO(), stations.get(0).getId());
+        assertEquals(closedStation.getIdForDTO(), stations.getFirst().getId());
         assertEquals(when.toLocalDate(), stationClosure.getBegin());
         assertEquals(when.plusWeeks(1).toLocalDate(), stationClosure.getEnd());
         assertFalse(stationClosure.getFullyClosed());
